# distributed-churn-prediction

./: .gitignore  LICENSE  README.md  Sparkify.ipynb  process.py  publish.py  pyproject.toml
